# lunes_safeguard

./: .gitignore  .gitleaks.toml  ARQUITETURA_INFORMACAO_REVISAO.md  AUDIT_REPORT.md  CONTRACT_FRONTEND_AUDIT.md  Cargo.toml  DEVELOPER_GUIDE.md  FASE_1_ANALISE_ESTRATEGICA.md  FASE_2_DESIGN_ARQUITETURA.md  FRONTEND_STRATEGY.md  Guia Desing.md  INTEGRATION_AUDIT.md  INVESTOR_SLIDE_CONTENT.md  MIGRATION_GUIDE.md  README.md  Requisitos.md  RequisitosFront.md  SECURITY_ANALYSIS_REPORT.md  Score.md  Tasks.md  config.json  deploy.sh  package.json  prompt.md  test_errors.txt
.github/workflows/: gitleaks.yml  gitleasks.yml  main.yml
contracts/safeGard/: Cargo.toml  business_rules_validation.rs  integration_tests.rs  lib.rs  memory_optimization.rs  security.rs  security_tests.rs  tests.rs  tests_corrected.rs
frontend/: .gitignore  .prettierignore  CHROME_EXTENSION_ERRORS_DETAILED_ANALYSIS.md  CHROME_EXTENSION_ERRORS_SOLUTIONS.md  GUIA_USUARIO_SOLUCOES_CARTEIRAS.md  README.md  README_WEB3_SOLUTIONS.md  eslint.config.js  package.json  tsconfig.json  turbo.json
interfaces/psp22/: Cargo.toml  lib.rs
safeguard-web/: .env.example  .eslintrc.cjs  .prettierrc  BREADCRUMB_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  index.html  lunes.design-tokens.json  package.json  playwright.config.ts  tailwind.config.ts  tailwind.lunes.preset.js  vite.config.ts  vitest.config.ts
safeguard-web/public/: manifest.json  robots.txt  sitemap.xml  sw.js
safeguard-web/scripts/: analyze-bundle.js  generate-sitemap.js  generate-sitemap.mjs
safeguard-web/src/: App.tsx  index.css  main.tsx
safeguard-web/src/components/: Accordion.tsx  ErrorBoundary.tsx  Timeline.tsx  Web3TestComponent.tsx
safeguard-web/src/components/accessibility/: FocusManager.tsx  LiveRegion.tsx  ScreenReaderOnly.tsx  SkipLink.tsx  index.ts
safeguard-web/src/components/animation/: useMotion.ts
safeguard-web/src/components/charts/: DonutChart.tsx  (+1 more)
safeguard-web/src/config/: contract.config.ts
safeguard-web/src/contexts/: ToastContext.tsx
safeguard-web/src/hooks/: useProjectStatus.ts  useToast.ts  useWeb3.ts
safeguard-web/src/i18n/: en.json  es.json  index.ts  pt.json
safeguard-web/src/services/: api.ts  contractService.ts  pinataService.ts  polkadotService.ts
safeguard-web/src/test/: setup.ts
safeguard-web/src/types/: index.ts
safeguard-web/src/utils/: formatters.ts  security.ts  seo.ts  suspense.tsx  txClient.ts
safeguard-web/tests/e2e/: governance.spec.ts  home.spec.ts
temp_contract/: Cargo.toml  lib.rs
(+66 files in other folders)
