[package]
name = "Safeguard"
version = "1.0.0"
edition = "2021"
authors = ["Lunes "]

[dependencies]

ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# Include brush as a dependency and enable default implementation for PSP22 via brush feature
openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["ownable","reentrancy_guard"] }
psp22 = { version = "1.0", default-features = false, features = ["ink-as-dependency"] }
[lib]
name = "Safeguard"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "psp22/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = [] 