[package]
name = "safeguard"
version = "1.0.0"
edition = "2021"
authors = ["Lunes Platform"]
description = "Secure governance and withdrawal contract for Lunes platform"
license = "Apache-2.0"

[dependencies]
ink = { version = "5.1.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

psp22 = { path = "../../interfaces/psp22", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "safeguard"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22/std",
]
ink-as-dependency = []

[dev-dependencies]
ink_e2e = "5.1.1"