[package]
name = "psp22"
version = "1.0.0"
edition = "2021"
authors = ["Lunes Platform"]
description = "PSP22 interface for Lunes Safeguard contract"
license = "Apache-2.0"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "psp22"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
